Fix navigation bar spacing

--- a/ui/resources/css/AllGames.css
+++ b/ui/resources/css/AllGames.css
@@ -242,11 +242,10 @@ td:nth-child(6) img {
 
 #navigation-bar {
   display: flex;
+  justify-content: space-between;
   width: 100%;
-  justify-content: space-evenly;
+  max-width: 1840px;
+  margin: 0 auto;
   flex-shrink: 0;
-}
-
-#navigation-bar button:first-child {
-  margin-left: 16px
+  gap: 10px;
 }
